# tavern

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Caddyfile  DESIGN.md  README.md  biome.jsonc  bunfig.toml  compose.yml  conductor.json  package.json  skills-lock.json  tsconfig.base.json
.claude/: launch.json  settings.json
apps/website/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/website/src-tauri/capabilities/: default.json
apps/website/src-tauri/icons/: icon.icns
apps/website/src-tauri/src/: main.rs
docs/: README.md  app.md  artifact-pane-ui-inspiration.md  docs-policy.md  domains.md  frontend.md  openclaw-plugin-deploy.md  openclaw-runtime-upgrade.md  react.md  releases.md  runtime.md  sdk.md  system.md  tavern-chat-routing-cleanup-plan.md  testing.md
homebrew/: tavern-runtime.rb.template
jobs/: check-skill-updates-job.ts  define-job.ts  index.ts  provider-usage-soft-failures.ts  sync-agent-runtime-agents-job.ts  sync-agent-runtime-chats-job.ts  sync-agent-runtime-config-job.ts  sync-agent-runtime-cron-job.ts  sync-agent-runtime-sessions-job.ts  sync-claude-code-usage-job.ts  sync-codex-usage-job.ts  sync-openrouter-usage-job.ts  sync-runtime-skills-job.ts
patches/: @ai-sdk%2Fharness-claude-code@1.0.8.patch  @ai-sdk%2Fharness-pi@1.0.8.patch  @ai-sdk%2Fharness@1.0.8.patch  @shadcn%2Freact@0.1.0.patch
plans/: 001-ci-verification-gate.md  002-bound-chat-event-queries.md  003-runtime-api-auth.md  004-getchat-direct-lookup.md  005-remove-dead-packages.md  006-chat-native-multi-agent-runtime.md  (+8 more)
(+3474 files in other folders)
