[package]
name = "tavern-desktop"
version = "1.1.11"
description = "Tavern desktop shell"
authors = ["Tavern"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["devtools", "macos-private-api"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = { version = "2.10.1", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = ["dep:tauri-plugin-updater"]
